--- a/.github/workflows/RDPCHROME.yml
+++ b/.github/workflows/RDPCHROME.yml
@@ -1,6 +1,6 @@
-name: RDP CHROME
+# This is a basic workflow to help you get started with Actions
 
- 
+name: Windows-CRD
 
 on: 
 
@@ -20,15 +20,13 @@ on:
 
         required: true
 
- 
+  
 
 jobs:
 
   build:
 
-    runs-on: Windows-latest
-
- 
+    runs-on: windows-latest
 
     steps:
 
@@ -45,4 +43,3 @@ jobs:
     - name: Keep Alive
 
       run: ./timeout.ps1
-
